--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </header>
     <section class=text-center col-12>
     <hr>
-    <button class="btn btn-primary btn-xl">Find out more!</button>
+       <a href="https://mailchi.mp/74ff3c937e93/sebastian">
+         <button class="btn btn-primary btn-xl">Find out more!</button>
+       </a>
+
     </section>
   </div>
   </div> 
